fix layout issues and hmbr menu in contact page

--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,6 @@ header{
 }
 .navbar{
     padding: 20px 0;
-    /* position: sticky; */
 }
 .navbar.portfolio{
     padding: 20px 0;
@@ -77,45 +76,17 @@ header{
     font-weight: 600;
 }
 
-/* .banner img{
-    max-width: 600px;
-    width: 80%;
-} */
-/* nav{
-    background-color: #f4f4f4;
-    padding: 10px;
-    position: sticky;
-    top: 0px;
-}
-nav ul{
-    white-space: nowrap;
-    max-width: 1200px;
-    margin: 0 auto;
-}
-nav li{
-    width: 25%;
-    display: inline-block;
-    font-size: 20px;
-    text-align: center;
-}
-nav li a{
-    text-decoration: none;
-    color: #4b4b4b;
-} */
 main{
     max-width: 100%;
-    width: 1200px;
-    /* margin: 80px auto; */
     padding: 0 40px;
     box-sizing: border-box;
     text-align: center;
     position: relative;
 }
 main .contact{
-    max-width: none;
-    position: none;
-    height: 70vh;
-    padding: 100px 0;
+    position: relative;
+    top: 250px;
+    z-index: -1;
 }
 article h2{
     font-size: 48px;
@@ -124,56 +95,41 @@ article p{
     line-height: 1.5em;
     color: #4b4b4b;
 }
-.images{
-    text-align: center;
-    margin: 80px 0;
-    white-space: nowrap;
-}
-.images li{
-    display: inline-block;
-    width: 40%;
-    margin: 20px 5%;
-}
-.images li img{
-    max-width: 100%;
-}
-.join{
-    background: #f4f4f4;
-    text-align: center;
-    padding: 60px 20px;
-    color: #4b4b4b;
-}
-.join h2{
-    font-size: 36px;
-}
 
 footer{
-    position: fixed;
-    bottom: 0;
+    position: relative;
     width: 100%;
     background: black;
     color: white;
     padding: 10px;
     text-align: center;   
 }
+.cfooter{
+    position: fixed;
+    bottom: 0;
+}
+footer ul{
+    padding: 10px;
+}
 .footer ul li{
     display: inline-block;
     margin: 10px 5px 0;
 }
+.copyright{
+    padding: 5px;
+}
 .social{
-    margin-left: 10%;
     display: inline-block;
+    margin: 0 0 0 20%;
 }
 .social li a{
     color: white;
+    padding: 10px;
 }
 
 .card{
-    width: 18rem;
+    width: 14rem;
 }
-/* .card-body h5{
-    color: teal;
-} */
 
 .skills{
     display: inline-block;
@@ -187,20 +143,9 @@ footer{
 
 /* pseudo-classes */
 
-/* nav li a:hover{
-    background-color: #a5bac6;
-    color: white;
-    padding: 5px;
-    border-radius: 10px;
-    text-decoration: none;
-} */
 .card:hover{
     position: relative;
     top: -4px;
-}
-.social li a:hover{
-    text-decoration: none;
-    color: teal;
 }
 
 @media screen and (max-width:575px){
@@ -213,11 +158,17 @@ footer{
     .banner.about{
         background-position: right;
     }
-    .footer{
-        display: inline;
+    footer{
+        background: black;
+        color: white;
+    }
+    .footer ul li{
+        text-align: center;
+        margin: 0;
     }
     .social{
         margin-left: 0px;
+        text-align: center;
     }
 }
 
@@ -227,7 +178,7 @@ footer{
 }
 
 .scrolling-wrapper{
-	overflow-x: auto;
+    overflow-x: auto;
 }
 
 body{
@@ -244,18 +195,4 @@ h1{
 .subtitle{
 	font-size: 1.25em;
 	opacity: 0.65;
-}
-
-.card-block{
-	height: 250px;
-	background-color: #fff;
-	border: none;
-	/* background: linear-gradient(to right bottom, hsla(200, 90%, 70%, 0.8), hsla(270, 70%, 40%, 0.8)), url('https://source.unsplash.com/1024x1024?mountains'); */
-	/* background-position: center; */
-	/* background-size: cover; */
-	transition: all 0.2s ease-in-out !important;
-	&:hover{
-		transform: translateY(-5px);
-		box-shadow: none;
-	}
 }
